Modification du pied de page dans la branche principale

--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
             <li>contact</li>
         </ul>
     </nav>
+    <footer>
+        <p>2025 tous droits reserves</p>
+    </footer>
 </body>
 </html>
