--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             <li>contact</li>
         </ul>
     </nav>
+    <section class="blog">
+        
+    </section>
     <footer>
         <p>2025 tous droits reserves</p>
     </footer>
